[package]
name = "outline-ss-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws", "http2"] }
bytes = "1.10"
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
hyper = { version = "1.8", features = ["client", "http1", "http2", "server"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "server", "server-auto", "service", "tokio"] }
libc = "0.2"
md-5 = "0.10"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
socket2 = "0.5"
sockudo-ws = { version = "1.7.3", default-features = false, features = ["tokio", "http3", "fastrand"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tokio-rustls = "0.26"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemalloc-ctl = { version = "0.6", features = ["stats", "use_std"] }
tikv-jemallocator = "0.6"

[dev-dependencies]
http-body-util = "0.1"
rcgen = "0.14"
tokio-tungstenite = "0.28"

[patch.crates-io]
h3 = { path = "vendor/h3" }
sockudo-ws = { path = "vendor/sockudo-ws" }
